Added .ordinalize to number in mailer

--- a/app/views/treasure_found_mailer/treasure_found.html.erb
+++ b/app/views/treasure_found_mailer/treasure_found.html.erb
@@ -1,3 +1,3 @@
 <h3>Hey, you’ve found a treasure, congratulations!</h3>
 
-<p>You are <%= @number_of_treasure_hunted %> treasure hunter who has found the treasure.</p>
+<p>You are <%= @number_of_treasure_hunted.ordinalize %> treasure hunter who has found the treasure.</p>
