--- a/app/views/treasure_hunt/index.html.erb
+++ b/app/views/treasure_hunt/index.html.erb
@@ -3,13 +3,7 @@
 </div>
 
 <script type='text/javascript'>
-  $(document).ready(function(){
-    handler = Gmaps.build('Google');
-    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-      markers = handler.addMarkers(<%=raw @hash.to_json %>);
-      handler.bounds.extendWith(markers);
-      handler.fitMapToBounds();
-      handler.getMap().setZoom(7);
-    });
+  $(document).ready(function() {
+    show_gmap(<%=raw @hash.to_json %>)
   });
 </script>
