Make sure that email is sent just once

--- a/app/views/treasure_hunt/index.html.erb
+++ b/app/views/treasure_hunt/index.html.erb
@@ -2,6 +2,6 @@
 
 <script type='text/javascript'>
   $(document).ready(function() {
-    show_gmap(<%=raw @hash.to_json %>)
+    show_gmap(<%=raw @hash.to_json %>);
   });
 </script>
